# madigan

./: .gitignore  .gitmodules  README.md  README.org  requirements.txt  setup.py
experiments/: config.yaml
experiments/SineCompositeQ/: config.yaml
madigan/: Sine Q-Learning.ipynb  config.yaml  dash.sh  debug_explore.py  interact.py  neural_decision_trees.ipynb  parse_yaml.sh  run_dash.py  test.json  test.py  train.py  train.sh  train_dash.py  train_multiple.sh
madigan/dash/: dash.py  dash.ui  dash1.py  dash_new.py  dash_new.ui  dash_synth.py  dash_synth1.py  dash_synth1.ui  dash_synth_base.py  dash_synth_base.ui  dash_test.py  dash_ui.py  plots.py  trainer_thread.py  training.py  training_base.py  training_base.ui  utils.py
madigan/dash/ref/: dash_test.py  training_base.py
madigan/environments/: .#synth.py  Accounting_Logic.ipynb  __init__.py  env.py  preprocessor.py  reward_normalization.pyx  reward_shaping.py  reward_shaping.pyx  synth.py
madigan/environments/cpp/: Account.cpp  Account.h  Assets.h  Broker.cpp  Broker.h  CMakeLists.txt  Config.cpp  Config.h  DataSource.cpp  DataSource.h  DataTypes.h  Env.cpp  Env.h  Portfolio.cpp  Portfolio.h  PyDataSource.h  PyEnv.h  WaveTableOsc.h  __init__.py  env.cpp  envTest.cpp  envTest.py  randomBoolGenerator.h
madigan/environments/cpp/tests/: envTest  envTest.cpp  envTest.py  envWrapperSpeedTest.py
madigan/fleet/: __init__.py  agent.py  conv_model.py  dqn.py  mlp_model.py  model.py  utils.py
madigan/fleet/algorithm/: base.py  ddpg.py  dqn.py  iqn.py  offpolicy_ac.py  offpolicy_q.py
madigan/fleet/net/: __init__.py  conv_net.py  conv_net_iqn.py  gru_net.py  mlp_model.py  utils.py
madigan/modelling/: __init__.py  utils.py
madigan/modelling/algorithm/: __init__.py  base.py  ddpg.py  dqn.py  dqn_controller.py  dqn_recurrent.py  hdqn.py  iqn.py  iqn_controller.py  offpolicy_ac.py  offpolicy_q.py  rdqn.py  sac.py  utils.py
madigan/modelling/net/: __init__.py  base.py  common.py  conv_net.py  conv_net_ddpg.py  conv_net_iqn.py  conv_net_sac.py  lstm_net.py  mlp_net.py  series_net.py  transformer_net.py  utils.py
madigan/notebooks/: EDA_FX.ipynb  autoencoder_compression.ipynb  sineA.ipynb  synth_actor_critic.ipynb  synth_dqn.ipynb  synth_dqn_integration.ipynb  synth_pg.ipynb  trend_synth.ipynb
madigan/run/: run.py  test.py  train.py  trainer.py
madigan/scripts/: IQN_BRTI_15min_DDR_trans_0.0_rb_200k.yaml  IQN_BRTI_15min_DDR_unit_.2_trans_0.0_rb_200k.yaml  IQN_BRTI_15min_ret_trans_0.0_rb_200k.yaml  IQN_BRTI_15min_ret_unit_.2_trans_0.0_rb_200k.yaml  IQN_BRTI_15min_trans_0.0_rb_200k.yaml  exp1.sh  exp10.sh  exp11.sh  exp12.sh  exp13.sh  exp14.sh  exp15.sh  exp2.sh  exp3.sh  exp4.sh  exp5.sh  exp6.sh  exp7.sh  exp8.sh  exp9.sh  exp_brl.sh  exp_cad.sh  exp_gbp.sh  exp_inr.sh  exp_jpy.sh  exp_mxn.sh  exp_nzdjpy_15min.sh  exp_nzdjpy_5min.sh  iqn_gbpusd_daily_priceonly_ret_lev20_unit.05_trans_.001.yaml  iqn_gbpusd_daily_priceonly_ret_lev20_unit.05_trans_.001_dropout.4.yaml  iqn_nzdjpy_15min_priceonly_cpw.71_lev50_unit.05_multistack1510.yaml  iqn_nzdjpy_15min_priceonly_cpw.71_lev50_unit.05_trans_.001_multistack1510.yaml  iqn_nzdjpy_15min_priceonly_ret_nolev_unit.2_dropout.1_trans.001.yaml  iqn_nzdjpy_1min_priceonly_cpw.71_lev50_unit.05_multistack1515.yaml  iqn_nzdjpy_1min_priceonly_ret_lev50_unit.05_multistack1515.yaml  iqn_nzdjpy_5min_priceonly_cpw.71_lev50_unit.05_multistack1515.yaml  iqn_nzdjpy_5min_priceonly_ret_lev50_unit.05.yaml  iqn_nzdjpy_5min_priceonly_ret_nolev_unit.2_dropout.1_trans.001.yaml  iqn_usdbrl_daily_priceonly_ret_lev20_unit.05_trans_.001.yaml  iqn_usdbrl_daily_priceonly_ret_lev20_unit.05_trans_.001_dropout.4.yaml  (+37 more)
madigan/synth/: synth.py
madigan/synth/cpp/: CMakeLists.txt  synth.cpp  synth.h  synth_c.cpp
madigan/tests/: custom_rb_vs_cpprb.py  dqn_test.py  list_vs_deque.py  replay_buffer_test.py  test_loop_test.py  test_reward_shaping.py  test_zmq_pair.py  test_zmq_rep_req.py  test_zmq_tornado_callback.py
madigan/utils/: __init__.py  config.py  data.py  logging.py  metrics.py  plotting.py  plotting_pub.py  preprocessor.py  replay_buffer.py  segment_tree.py  utils.py
madigan/utils/buffers/: __init__.py  common.py  cpprb_wrapper.py  nstep_buffer.py  prioritized_replay_buffer.py  recurrent_replay_buffer.py  replay_buffer.py  segment_tree.py
madigan_cpp/: CMakeLists.txt  Generator.cpp  Synth.cpp  Synth.h  convModel.cpp
notebooks/: DDR_DSR.ipynb  EDA_FX_Topology.ipynb  EDA_FX_Wavelets.ipynb  OUPairSynth.ipynb  Ornstein_Uhlenbeck.ipynb  PyDataSource_Inherit.ipynb  SeriesNet.ipynb  actor_critic_simple.ipynb  autoencoder_compression.ipynb  cme_data_process.ipynb  cme_datamine_api.ipynb  composite_synth.ipynb  contrastive_learning_bull_bear.ipynb  hdf_csv_conversion.ipynb  hdf_dataSource.ipynb  risk_distortion.ipynb  sine_binary.ipynb  sine_dynamic_synth.ipynb  sine_ternary.ipynb  stride_tricks.ipynb  synth_actor_critic.ipynb  synth_dqn.ipynb  ta_encoder.ipynb  trendOU_synth.ipynb  trend_synth.ipynb
